--- a/portfolio2.html
+++ b/portfolio2.html
@@ -12,6 +12,7 @@
 		<br><br>
 		<nav>
 			<li><a href="portfolio1.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="portfolio2.html">About</a></li>
 			<li><a href="portfolio3.html">Contact</a></li>
 		</nav>
