--- a/portfolio3.html
+++ b/portfolio3.html
@@ -12,7 +12,7 @@
 		<h4 id="h4">Fullstack Web Developer</h4>
 		<br><br>
 		<nav>
-			<li><a href="portfolio1.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="portfolio2.html">About</a></li>
 			<li><a href="portfolio3.html">Contact</a></li>
 		</nav>
