--- a/portfolio3.html
+++ b/portfolio3.html
@@ -25,7 +25,7 @@
 			<hr>
 		<div id="ptlist3">
 				<ul list-style-type:none>
-					<li><a href="mailto:hfms@live.com.my" id="mailto" target="_newtab"><i class="fa fa-envelope fa-2x" src="@Url.Content("~/Content/HomePage/email.png")" alt="email"></i>mcpuzio@gmail.com</a></li>
+					<li><a href="mailto:mcpuzio@michaelpuzio.com" id="mailto" target="_newtab"><i class="fa fa-envelope fa-2x" src="@Url.Content("~/Content/HomePage/email.png")" alt="email"></i>mcpuzio@michaelpuzio.com</a></li>
 					<li><a href="https://facebook.com/mcpuzio"><i class="fa fa-facebook-official fa-2x"></i>Like My FB Page</a></li>
 					<li><a href="https://github.com/mcpuzio/NYCDAportfolioandprojects.git"><i class="fa fa-github fa-2x"></i>Checkout my GitHub</a></li>
 					<li><a href=""><i class="fa fa-whatsapp fa-2x"></i>Message Me On WhatsApp</a></li>
